feat(render): 图片WebP解码、智能布局与F6清缓存
- 添加 webp-imageio 依赖，ImageIO 作为主解码器支持 WebP 格式
- 统一 extractImageUrl 提取 lazy-load 图片真实 URL
- 协议相对 URL (//i.mcmod.cn) 自动补全为 https
- 图片尺寸基于 lineHeight 自适应：最大8行高度，宽高联动保持比例
- 所有布局间距改为 lineHeight 派生值，随字体大小缩放
- 图片添加上下边距，node.h 只含图片高度避免占位符溢出
- 表格单元格内图片高度上限为5行，缩略图3行
- DocumentRenderer 渲染时用 getCachedSize 获取真实宽高比
- 已知文本图标(含 icon-exp)不再产生 unmapped 警告
- F6 清缓存功能完善：清除磁盘+图片纹理缓存并自动重新加载当前页
- ImageManager.clearCache() 释放 GPU 纹理资源
- CACHE_VERSION 升级至 7，旧缓存自动失效
- .gitignore 排除 versions/*/logs、bin、.eclipse 等运行时文件